tigergraph-server/3.6/reference/return-codes.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes)[Next](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph Server](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  *     * [TigerGraph Server](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
      * [Internal Architecture](https://docs.tigergraph.com/tigergraph-server/3.6/intro/internal-architecture)
      * [Multigraph Overview](https://docs.tigergraph.com/tigergraph-server/3.6/intro/multigraph-overview)
      * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.6/intro/transaction-and-acid)
      * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.6/intro/continuous-availability-overview)
      * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.6/intro/comparison-of-editions)
      * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.6/intro/release-process)
  *     * Getting Started
      * [Get Started with Docker](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/docker)
      * Get Started with Cloud Images
        * [Get Started on AWS](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/aws)
        * [Get Started on Microsoft Azure](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/azure)
        * [Get Started on Google Cloud](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/gcp)
      * [Install TigerGraph on Linux](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/linux)
      * [Get Started with Virtual Box](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/virtual-box)
      * Learn GSQL
        * [GSQL 101](https://docs.tigergraph.com/gsql-ref/3.6/tutorials/gsql-101/)
        * [Pattern Matching Tutorial](https://docs.tigergraph.com/gsql-ref/3.6/tutorials/pattern-matching/)
  *     * Installation
      * [Hardware and Software Requirements](https://docs.tigergraph.com/tigergraph-server/3.6/installation/hw-and-sw-requirements)
      * [Installation](https://docs.tigergraph.com/tigergraph-server/3.6/installation/install)
      * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.6/installation/upgrade)
      * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.6/installation/uninstallation)
      * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.6/installation/license)
  *     * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/)
      * [Quickstart with EKS](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-eks)
      * [Quickstart with AKS](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-aks)
      * [Quickstart with GKE](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-gke)
      * [Kubernetes Operator](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/)
        * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/installation)
        * [Cluster Operations](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/cluster-operations)
        * [Connecting to a Cluster](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/connect-to-cluster)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/uninstallation)
  *     * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/)
      * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/gsql-sessions)
      * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/using-a-remote-gsql-client)
  *     * [User Access Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/)
      * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/enabling-user-authentication)
      * [Managing Credentials](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/managing-credentials)
      * [Access Control Model in TigerGraph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model)
      * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management)
      * [User Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/user-management)
      * [ACL Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management)
      * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac)
      * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/sso)
      * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/ldap)
  *     * High Availability
      * [High Availability Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-cluster)
      * [High Availability Support for GSQL Server](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-for-gsql-server)
      * [High Availability Support for Application Server](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-for-application-server)
      * [Compute-on-demand Elastic Cluster](https://docs.tigergraph.com/tigergraph-server/3.6/ha/elastic-cluster)
      * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.6/ha/cluster-commands)
      * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.6/ha/remove-failed-node)
  *     * [Cluster Resizing](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/)
      * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/expand-a-cluster)
      * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/shrink-a-cluster)
      * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/repartition-a-cluster)
  *     * [Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/)
      * [Set Up Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/set-up-crr)
      * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.6/crr/fail-over)
      * [Troubleshooting for Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/troubleshooting)
      * [FAQ](https://docs.tigergraph.com/tigergraph-server/3.6/crr/faq)
  *     * [Database Definition](https://docs.tigergraph.com/tigergraph-server/3.6/data-definition/README)
  *     * [Data Loading](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/)
      * [AWS S3 Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/s3-loader-user-guide)
      * [Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/)
        * [Data Loading with Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/load-data)
        * [Kafka Data Source Management](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/manage-data-source)
        * [Kafka Loader Loading Job Management](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/manage-loading-jobs)
        * [SSL/SASL Authentication for Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/kafka-ssl-sasl)
      * [Spark Connection Via JDBC Driver](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/spark-connection-via-jdbc-driver)
      * [Data Streaming Connector](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/data-streaming-connector)
  *     * [Querying](https://docs.tigergraph.com/tigergraph-server/3.6/data-querying/README)
  *     * [System Management](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/management-with-gadmin)
      * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/memory-management)
      * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/manage-services)
      * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/management-commands)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.6/security/)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.6/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.6/security/encrypting-data-at-rest)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.6/security/file-output-policy)
  *     * [Database Import/Export](https://docs.tigergraph.com/tigergraph-server/3.6/import-export/database-import-export)
  *     * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.6/backup-and-restore/)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.6/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.6/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.6/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.6/API/json-catalog)
  *     * Troubleshooting
      * [Knowledge base and FAQs](https://kb.tigergraph.com/)
      * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/system-administration-faqs)
      * [Log files](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/log-files)
        * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/elk-filebeat)
      * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/troubleshooting-guide)
  *     * [Release Notes](https://docs.tigergraph.com/tigergraph-server/3.6/release-notes/)
  *     * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.6/legal/patents-and-third-party-software)
  *     * References
      * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.6/reference/configuration-parameters)
      * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes)
      * [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.6/reference/list-of-privileges)
      * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.6/reference/ports)
      * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.6/reference/glossary)


TigerGraph DB 3.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph Server 3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * References
  * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.6/modules/reference/pages/return-codes.adoc)
### Contents
  * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_return_codes)
  * [REST](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_rest)
  * [GSQL](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_gsql)
  * [SYS](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_sys)
  * [GSQL client exit codes](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_gsql_client_exit_codes)


# Return codes
### Contents
  * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_return_codes)
  * [REST](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_rest)
  * [GSQL](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_gsql)
  * [SYS](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_sys)
  * [GSQL client exit codes](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_gsql_client_exit_codes)


This page documents the _status codes_ and _exit codes_ on the TigerGraph platform. Each status code follows the format: `<component>-<code>` , while exit codes are numeric values between 0 - 255.
If the system was handling a user request, the status code and message will be in the JSON response (see [GSQL Query Output Format](https://docs.tigergraph.com/gsql-ref/4.2/querying/query-operations#_gsql_query_output_format) ). For internal errors, the error information may be in a log file.
The GSQL Client will exit with a non-zero code if there’s an error while handling a user request. To view the exit code of the GSQL client, run the command `echo $?` and the exit code of the most recent command will be printed to the terminal.
## [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_return_codes)Return codes
### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_rest)REST
This section covers return codes from the REST++ server.
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_0000_0999)0000 - 0999
Codes in this range are success codes. When the conditions for multiple codes are true, the lowest code is returned.
Code | Description  
---|---  
`REST-0000` | General successful completion  
`REST-0001` | Successful vertex insertion or update  
`REST-0002` | Successful edge insertion or update  
`REST-0003` | Successful vertex and edge insertion or update  
`REST-0004` | Empty response  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_1000_1999)1000 - 1999
RESTPP endpoint errors.
Code | Description  
---|---  
`REST-1000` | The endpoint does not exist.  
`REST-1003` | The query could not run because there is no graph schema.  
`REST-1004` | The graph cannot be found.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_2000_2999)2000 - 2999
Payload errors.
Code | Description  
---|---  
`REST-2001` | The JSON payload is invalid.  
`REST-2004` | The payload contains vertices of an invalid type.  
`REST-2005` | The payload contains edges of an invalid type.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_3000_3999)3000 - 3999
RESTPP general errors.
Code | Description  
---|---  
`REST-3000` | The query timed out from the timeout limit set by the request header.  
`REST-3001` | The query timed out from the timeout limit set by the built-in endpoint.  
`REST-3002` | The query timed out from the timeout limit set by the `RESTPP.Factory.DefaultQueryTimeoutSec` parameter.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_10000)10000+
Other RESTPP errors.
Code | Description  
---|---  
`REST-10001` | The endpoint has been removed.  
`REST-10004` | There was an exception when starting a scheduler.  
`REST-10005` | There was an exception when processing results.  
`REST-10015` | The request is in an orphan state due to malfunction in user-defined schedulers.  
`REST-10016` | Access denied due to an invalid token.  
`REST-12000` | RESTPP failed to get a response from GSE or GPE in time.  
`REST-12001` | No running GSE or GPE instance detected.  
`REST-12002` | The query was aborted by the user.  
`REST-12003` | The query failed due to insufficient disk space.  
`REST-30000` | The payload is invalid (general error).  
`REST-30200` | The parameter for [upserting data](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_upsert_data_to_graph) is invalid.  
`REST-30400` | The parameter for [showing query performance](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_show_query_performance) is invalid.  
### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_gsql)GSQL
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_0000_0999_2)0000 - 0999
Codes in this range are success codes. GSQL will return the smallest code when the conditions are met for multiple codes.
Code | Description  
---|---  
`GSQL-0000` | The query is successful.  
`GSQL-0001` | Vertices and edges were updated or inserted successfully.  
`GSQL-0002` | Vertices were updated or inserted successfully.  
`GSQL-0003` | Edges were updated or inserted successfully.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_1000_1999_2)1000 - 1999
Query parameter errors.
Code | Description  
---|---  
`GSQL-1001` | The query contains a parameter with a `NULL` value.  
`GSQL-1002` | General parameter error.  
`GSQL-1015` | Invalid parameter type.  
`GSQL-1020` | Invalid parameters.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_2000_2499)2000 - 2499
JSON string related errors.
Code | Description  
---|---  
`GSQL-2010` | JSON object format error.  
`GSQL-2011` | JSON array format error.  
`GSQL-2012` | JSON object is missing a field.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_2500_2999)2500 - 2999
Operator errors.
Code | Description  
---|---  
`GSQL-2500` | Division by zero error.  
`GSQL-2501` | The query contains incorrectly formatted `DATETIME` strings.  
`GSQL-2502` | The query contains illegal patterns.  
`GSQL-2503` | The query contains invalid operators.  
`GSQL-2601` | The parameter provided is of the wrong primitive type.  
`GSQL-2620` | The query contains an invalid array index.  
`GSQL-2621` | The query contains an out-of-bounds array index.  
`GSQL-2700` | Global variable not found.  
`GSQL-2701` | ValuePtr holds null pointer.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_3000_3999_2)3000 - 3999
Dynamic expression errors and expression function errors.
Code | Description  
---|---  
`GSQL-3000` | The query references non-existent attributes.  
`GSQL-3001` | The query references non-existent vertex types.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_4500_4999)4500 - 4999
Vertex type, edge type, and ID translation errors
Code | Description  
---|---  
`GSQL-4500` | The query references a vertex type that does not exist.  
`GSQL-4501` | The query references an edge type that does not exist.  
`GSQL-4502` | The query references an invalid vertex ID.  
`GSQL-4511` | The query contains an invalid vertex attribute.  
`GSQL-4521` | The query contains an invalid edge attribute.  
`GSQL-4522` | The number of edge attributes is invalid.  
`GSQL-4523` | An edge points from an invalid source vertex.  
`GSQL-4524` | An edge points to an invalid target vertex.  
`GSQL-4525` | An edge has both invalid source and target vertices.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_5000_5499)5000 - 5499
Print, I/O, or file system errors.
Code | Description  
---|---  
`GSQL-5001` | File does not exist.  
`GSQL-5101` | A file referenced in the query does not exist.  
`GSQL-5102` | File is not a regular file.  
`GSQL-5105` | GSQL was denied access to a file referenced in the query.  
`GSQL-5111` | A file referenced in the query cannot be read.  
`GSQL-5201` | File input policy violation.  
`GSQL-5301` | Connection error writing to S3.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_6000_6499)6000 - 6499
Errors related to updating the graph.
Code | Description  
---|---  
`GSQL-6000` | The query inserts an edge with an unknown vertex.  
`GSQL-6001` | Unsupported type of attribute update.  
`GSQL-6003` | Graph update aborted.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_6500_6999)6500 - 6999
Code | Description  
---|---  
`GSQL-6500` | The query was aborted by the user.  
`GSQL-6510` | The query was aborted due to its memory usage exceeds the specified limit.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_7000_7999)7000 - 7999
Built-in query errors.
Code | Description  
---|---  
`GSQL-7001` | API not supported.  
`GSQL-7002` | The query timed out.  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_8000_8999)8000 - 8999
Unexpected exceptions (C++).
Code | Description  
---|---  
`GSQL-8001` | Boost library exception  
`GSQL-8002` | Runtime exception  
`GSQL-8003` | `std` exception  
`GSQL-8999` | All other exceptions  
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_40000)40000+
User-defined exception errors.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_sys)SYS
This section covers engine-related errors.
Code | Description  
---|---  
`SYS-0001` | The engine is not available.  
`SYS-0002` | The query was rejected because the memory limit has been reached.  
`SYS-0003` | The query is aborted.  
`SYS-0004` | The endpoint has been removed.  
## [](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes#_gsql_client_exit_codes)GSQL client exit codes
The GSQL client will exit with non-zero code if there’s an error while handling a user request. To check the exit code, run the Linux command `echo $?` and the exit code of the most recent command will be printed in the console.
**Exit Code** | **Description**  
---|---  
0 | No error  
41 | Login or authentication error. The GSQL will also exit with this code if a graph with the supplied graph name cannot be found.  
201 | Invalid argument error  
202 | Connection error  
203 | Compatibility error  
204 | Session timeout  
211* | Syntax error  
212 | Runtime error  
213* | No graph in use error  
255 | Unknown error  
The exit codes marked with a star (*) are only applicable when a GSQL script is given as an argument.  
---  
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


